Update remove path